--- a/app/src/main/res/layout/recyclerview_plato_item.xml
+++ b/app/src/main/res/layout/recyclerview_plato_item.xml
@@ -7,7 +7,8 @@
     android:orientation="vertical"
     android:padding="16dp"
     android:visibility="visible"
-    tools:visibility="visible">
+    tools:visibility="visible"
+    >
 
     <TextView
         android:id="@+id/textViewNombre"
