va todo bien de platos se supone

--- a/app/src/main/res/layout/activity_plates_order.xml
+++ b/app/src/main/res/layout/activity_plates_order.xml
@@ -42,9 +42,8 @@
 
 
 
-            <!-- Botón + -->
             <Button
-                android:id="@+id/buttonMas"
+                android:id="@+id/buttonVolver"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/textViewTitle"
