--- a/app/src/main/res/layout/activity_edit_plate.xml
+++ b/app/src/main/res/layout/activity_edit_plate.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.plato_description">
+    tools:context=".ui.edit_plate">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -25,17 +25,7 @@
             android:textSize="38sp" />
 
         <!-- Botón Home -->
-        <Button
-            android:id="@+id/buttonAtras"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/textViewTitle"
-            android:layout_alignParentStart="true"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="-50dp"
-            android:background="@drawable/custom_button2"
-            android:text="atras"
-            android:textColor="#FFF" />
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -57,15 +47,16 @@
                 android:textStyle="bold"
                 android:textColor="#163172"
                 android:layout_marginTop="10dp"/>
-            <TextView
-                android:id="@+id/textViewNombre2"
+            <EditText
+                android:id="@+id/editTextNombre"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:hint="Introduce el nombre"
+                android:inputType="text"
                 android:textSize="18sp"
                 android:minHeight="35dp"
                 android:minWidth="340dp"
                 android:paddingLeft="10dp"
-                android:paddingTop="5dp"
                 android:background="@drawable/plato_info"
 
                 />
@@ -80,15 +71,16 @@
                 android:textColor="#163172"
                 android:layout_marginTop="10dp"/>
 
-            <TextView
-                android:id="@+id/textViewIngrediente2"
+            <EditText
+                android:id="@+id/editTextIngrediente"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:hint="Introduce los ingredientes"
+                android:inputType="text"
                 android:textSize="18sp"
                 android:minHeight="35dp"
                 android:minWidth="340dp"
                 android:paddingLeft="10dp"
-                android:paddingTop="5dp"
                 android:background="@drawable/plato_info"                />
 
             <TextView
@@ -102,21 +94,23 @@
                 android:textStyle="bold"
                 android:layout_marginTop="10dp"
                 />
-            <TextView
-                android:id="@+id/textViewPrecio2"
+            <EditText
+                android:id="@+id/editTextPrecio"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:hint="Introduce el precio"
+                android:inputType="number"
                 android:textSize="18sp"
                 android:minHeight="35dp"
                 android:minWidth="340dp"
                 android:paddingLeft="10dp"
-                android:paddingTop="5dp"
                 android:background="@drawable/plato_info"                />
 
             <TextView
                 android:id="@+id/textViewCategoria"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+
                 android:text="Categoría: "
                 android:textSize="18sp"
                 android:textColor="#163172"
@@ -124,45 +118,46 @@
                 android:layout_marginTop="10dp"
                 />
 
-            <TextView
-                android:id="@+id/textViewCategoria2"
-                android:layout_width="wrap_content"
+            <Spinner
+                android:id="@+id/spinnerCategorias"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:entries="@array/categorias"
+                android:paddingLeft="10dp"
                 android:textSize="18sp"
+                android:background="@drawable/plato_info"
+                android:layout_marginBottom="10dp"
                 android:minHeight="35dp"
                 android:minWidth="340dp"
-                android:paddingLeft="10dp"
-                android:paddingTop="5dp"
-                android:layout_marginBottom="10dp"
-                android:background="@drawable/plato_info"                />
+                android:prompt="@string/selecciona_categoria"
+                android:spinnerMode="dropdown"
+                />
 
 
         </LinearLayout>
         <Button
-            android:id="@+id/buttonEditar"
+            android:id="@+id/buttonCancelar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/textViewTitle"
             android:layout_alignParentStart="true"
-            android:layout_marginStart="80dp"
+            android:layout_marginStart="70dp"
             android:layout_marginTop="400dp"
             android:background="@drawable/custom_button2"
-            android:text="editar"
+            android:text="cancelar"
             android:textColor="#FFF"
             />
         <Button
-            android:id="@+id/buttonEliminar"
+            android:id="@+id/buttonConfirmar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/textViewTitle"
             android:layout_alignParentStart="true"
-            android:layout_marginStart="220dp"
+            android:layout_marginStart="215dp"
             android:layout_marginTop="400dp"
             android:background="@drawable/custom_button2"
-            android:text="eliminar"
+            android:text="confirmar"
             android:textColor="#FFF"
             />
-
-
     </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
