--- a/app/src/main/res/layout/activity_add_order.xml
+++ b/app/src/main/res/layout/activity_add_order.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.orders_description">
+    tools:context=".ui.add_order">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -15,7 +15,7 @@
         tools:visibility="visible">
 
         <TextView
-            android:id="@+id/textViewNombreClientePedidoDes"
+            android:id="@+id/textViewNombreClientePedidoAdd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
@@ -29,7 +29,7 @@
             android:id="@+id/buttonAtras"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/textViewNombreClientePedidoDes"
+            android:layout_below="@id/textViewNombreClientePedidoAdd"
             android:layout_alignParentStart="true"
             android:layout_marginStart="16dp"
             android:layout_marginTop="-50dp"
@@ -38,7 +38,7 @@
             android:textColor="#FFF" />
 
         <LinearLayout
-            android:id="@+id/placeDes"
+            android:id="@+id/placeAdd"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="120dp"
@@ -49,51 +49,115 @@
             android:visibility="visible"
             tools:visibility="visible">
 
-                         />
+            />
 
             <TextView
-                android:id="@+id/textViewNombreCliente"
+                android:id="@+id/textViewNombreClienteAddPedido"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Nombre del Cliente" />
 
-            <TextView
-                android:id="@+id/textViewNombreClienteFill"
+            <EditText
+                android:id="@+id/editTextNombreClienteAdd"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:hint="Introduce el nombre"
+                android:inputType="text"
+                android:textSize="12sp"
+                android:minHeight="35dp"
+                android:minWidth="340dp"
+                android:paddingLeft="10dp"
+                android:background="#F6F6F6"
+
+
                 />
 
             <TextView
-                android:id="@+id/textViewPrecioPedido"
+                android:id="@+id/textViewPrecioAddPedido"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Precio:" />
-            <TextView
-                android:id="@+id/textViewPrecioFill"
+            <EditText
+                android:id="@+id/editTextPreciioAdd"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:hint="Introduce el precio"
+                android:inputType="text"
+                android:textSize="12sp"
+                android:minHeight="35dp"
+                android:minWidth="340dp"
+                android:paddingLeft="10dp"
+                android:background="#F6F6F6"
+
+
                 />
 
             <TextView
-                android:id="@+id/textViewTelefonoPedido"
+                android:id="@+id/textViewTelefonoPedidoAdd"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Teléfono:" />
-            <TextView
-                android:id="@+id/textViewTelefonoFill"
+            <EditText
+                android:id="@+id/editTextTelefonoAdd"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:hint="Introduce el telefono"
+                android:inputType="text"
+                android:textSize="12sp"
+                android:minHeight="35dp"
+                android:minWidth="340dp"
+                android:paddingLeft="10dp"
+                android:background="#F6F6F6"
+
+
                 />
             <TextView
-                android:id="@+id/textViewFechaPedido"
+                android:id="@+id/textViewFechaPedidoAdd"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Fecha recogida:" />
-            <TextView
-                android:id="@+id/textViewFechaFill"
+            <!-- FECHA-->
+
+            <EditText
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/in_date"
+
+
+                android:layout_alignParentTop="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
+
+            <EditText
+                android:id="@+id/in_time"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="200dp"
+                android:layout_marginTop="-45dp"
+                android:layout_alignParentStart="true" />
+
+            <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                />
+                android:text="SELECT DATE"
+                android:id="@+id/btn_date"
+                android:layout_alignBottom="@+id/in_date"
+                android:layout_toRightOf="@+id/in_date"
+                android:layout_toEndOf="@+id/in_date" />
+
+
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="SELECT TIME"
+                android:id="@+id/btn_time"
+                android:layout_alignLeft="@+id/in_time"
+                android:layout_alignStart="@+id/btn_date"
+                android:layout_marginLeft="200dp"
+                android:layout_marginTop="-45dp"/>
+
+            <!-- -->
             <View
                 android:layout_width="match_parent"
                 android:layout_height="9dp"
@@ -104,43 +168,25 @@
                 android:id="@+id/recyclerViewPlates"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                tools:listitem="@layout/recyclerview_raciones"
+                tools:listitem="@layout/recyclerview_edit_raciones"
                 />
         </LinearLayout>
-        <Button
-            android:id="@+id/buttonEliminarPedido"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/placeDes"
-            android:layout_alignParentStart="true"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:background="@drawable/custom_button2"
 
-            android:text="@string/eliminar" />
 
         <Button
-            android:id="@+id/buttonEditarPedido"
+            android:id="@+id/buttonGuardarPedido"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/placeDes"
+            android:layout_below="@id/placeAdd"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="16dp"
             android:background="@drawable/custom_button2"
-            android:text="@string/editar" />
+            android:text="@string/add" />
 
-        <Button
-            android:id="@+id/buttonEnviarPedido"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/placeDes"
-            android:layout_alignParentEnd="true"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
-            android:background="@drawable/custom_button2"
-            android:text="@string/enviar" />
+
 
 
     </RelativeLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
