--- a/app/src/main/res/layout/activity_edit_order.xml
+++ b/app/src/main/res/layout/activity_edit_order.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.orders_description">
+    tools:context=".ui.edit_order">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -49,7 +49,7 @@
             android:visibility="visible"
             tools:visibility="visible">
 
-                         />
+            />
 
             <TextView
                 android:id="@+id/textViewNombreCliente"
@@ -57,21 +57,39 @@
                 android:layout_height="wrap_content"
                 android:text="Nombre del Cliente" />
 
-            <TextView
-                android:id="@+id/textViewNombreClienteFill"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                />
+            <EditText
+            android:id="@+id/editTextNombreClienteEdit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="Introduce el nombre"
+            android:inputType="text"
+            android:textSize="12sp"
+            android:minHeight="35dp"
+            android:minWidth="340dp"
+            android:paddingLeft="10dp"
+            android:background="#F6F6F6"
+
+
+            />
 
             <TextView
                 android:id="@+id/textViewPrecioPedido"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Precio:" />
-            <TextView
-                android:id="@+id/textViewPrecioFill"
+            <EditText
+                android:id="@+id/editTextPrecioEdit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:hint="Introduce el precio"
+                android:inputType="text"
+                android:textSize="12sp"
+                android:minHeight="35dp"
+                android:minWidth="340dp"
+                android:paddingLeft="10dp"
+                android:background="#F6F6F6"
+
+
                 />
 
             <TextView
@@ -79,21 +97,66 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Teléfono:" />
-            <TextView
-                android:id="@+id/textViewTelefonoFill"
+            <EditText
+                android:id="@+id/editTextTelefonoEdit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:hint="Introduce el telefono"
+                android:inputType="text"
+                android:textSize="12sp"
+                android:minHeight="35dp"
+                android:minWidth="340dp"
+                android:paddingLeft="10dp"
+                android:background="#F6F6F6"
+
+
                 />
             <TextView
                 android:id="@+id/textViewFechaPedido"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Fecha recogida:" />
-            <TextView
-                android:id="@+id/textViewFechaFill"
+            <!-- FECHA-->
+
+            <EditText
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/in_date"
+
+                android:layout_alignParentTop="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
+
+            <EditText
+                android:id="@+id/in_time"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="200dp"
+                android:layout_marginTop="-45dp"
+                android:layout_alignParentStart="true" />
+
+            <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                />
+                android:text="SELECT DATE"
+                android:id="@+id/btn_date"
+                android:layout_alignBottom="@+id/in_date"
+                android:layout_toRightOf="@+id/in_date"
+                android:layout_toEndOf="@+id/in_date" />
+
+
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="SELECT TIME"
+                android:id="@+id/btn_time"
+                android:layout_alignLeft="@+id/in_time"
+                android:layout_alignStart="@+id/btn_date"
+                android:layout_marginLeft="200dp"
+                android:layout_marginTop="-45dp"/>
+
+            <!-- -->
             <View
                 android:layout_width="match_parent"
                 android:layout_height="9dp"
@@ -104,41 +167,22 @@
                 android:id="@+id/recyclerViewPlates"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                tools:listitem="@layout/recyclerview_raciones"
+                tools:listitem="@layout/recyclerview_edit_raciones"
                 />
         </LinearLayout>
-        <Button
-            android:id="@+id/buttonEliminarPedido"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/placeDes"
-            android:layout_alignParentStart="true"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:background="@drawable/custom_button2"
 
-            android:text="@string/eliminar" />
 
         <Button
-            android:id="@+id/buttonEditarPedido"
+            android:id="@+id/buttonGuardarPedido"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/placeDes"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="16dp"
             android:background="@drawable/custom_button2"
-            android:text="@string/editar" />
+            android:text="@string/guardar" />
 
-        <Button
-            android:id="@+id/buttonEnviarPedido"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/placeDes"
-            android:layout_alignParentEnd="true"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
-            android:background="@drawable/custom_button2"
-            android:text="@string/enviar" />
+
 
 
     </RelativeLayout>
