--- a/app/src/main/res/layout/activity_add_order.xml
+++ b/app/src/main/res/layout/activity_add_order.xml
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="32dp"
-
+            android:text="@string/add"
             android:textColor="#163172"
             android:textSize="38sp" />
 
@@ -55,6 +55,9 @@
                 android:id="@+id/textViewNombreClienteAddPedido"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textSize="14sp"
+                android:textColor="#163172"
+                android:textStyle="bold"
                 android:text="Nombre del Cliente" />
 
             <EditText
@@ -76,9 +79,12 @@
                 android:id="@+id/textViewPrecioAddPedido"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Precio:" />
+                android:text="Precio:"
+                android:textSize="14sp"
+                android:textColor="#163172"
+                android:textStyle="bold"/>
             <EditText
-                android:id="@+id/editTextPreciioAdd"
+                android:id="@+id/editTextPrecioAdd"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:hint="Introduce el precio"
@@ -95,6 +101,9 @@
             <TextView
                 android:id="@+id/textViewTelefonoPedidoAdd"
                 android:layout_width="wrap_content"
+                android:textSize="14sp"
+                android:textColor="#163172"
+                android:textStyle="bold"
                 android:layout_height="wrap_content"
                 android:text="Teléfono:" />
             <EditText
@@ -112,9 +121,38 @@
 
                 />
             <TextView
+                android:id="@+id/textViewCategoria"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:text="Categoría: "
+                android:textSize="14sp"
+                android:textColor="#163172"
+                android:textStyle="bold"
+                android:layout_marginTop="10dp"
+                />
+
+            <Spinner
+                android:id="@+id/spinnerCategorias"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:entries="@array/categorias"
+                android:paddingLeft="10dp"
+                android:textSize="18sp"
+
+                android:layout_marginBottom="10dp"
+                android:minHeight="35dp"
+                android:minWidth="340dp"
+                android:prompt="@string/selecciona_categoria"
+                android:spinnerMode="dropdown"
+                />
+            <TextView
                 android:id="@+id/textViewFechaPedidoAdd"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textSize="14sp"
+                android:textColor="#163172"
+                android:textStyle="bold"
                 android:text="Fecha recogida:" />
             <!-- FECHA-->
 
