--- a/app/src/main/res/layout/activity_orders_order.xml
+++ b/app/src/main/res/layout/activity_orders_order.xml
@@ -61,13 +61,13 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="100dp"
             android:background="@drawable/custom_button"
-            android:text="@string/categoria"
+            android:text="@string/cliente"
             android:textColor="#FFF"
             android:textSize="30sp" />
 
         <!-- Botón 2 -->
         <Button
-            android:id="@+id/buttonNombre"
+            android:id="@+id/buttonTelefono"
             android:layout_width="231dp"
             android:layout_height="wrap_content"
             android:layout_below="@id/buttonCliente"
@@ -80,10 +80,10 @@
 
         <!-- Botón 3 -->
         <Button
-            android:id="@+id/buttonAmbas"
+            android:id="@+id/buttonFecha"
             android:layout_width="231dp"
             android:layout_height="wrap_content"
-            android:layout_below="@id/buttonNombre"
+            android:layout_below="@id/buttonTelefono"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="60dp"
             android:background="@drawable/custom_button"
