--- a/app/src/main/res/layout/activity_add_order.xml
+++ b/app/src/main/res/layout/activity_add_order.xml
@@ -40,7 +40,7 @@
         <LinearLayout
             android:id="@+id/placeAdd"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="520dp"
             android:layout_marginTop="120dp"
             android:background="@drawable/plato_info"
             android:layout_marginHorizontal="20dp"
@@ -83,18 +83,17 @@
                 android:textSize="14sp"
                 android:textColor="#163172"
                 android:textStyle="bold"/>
-            <EditText
+            <TextView
                 android:id="@+id/editTextPrecioAdd"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:hint="Introduce el precio"
-                android:inputType="text"
+                android:hint="0"
                 android:textSize="12sp"
                 android:minHeight="35dp"
                 android:minWidth="340dp"
                 android:paddingLeft="10dp"
-                android:background="#F6F6F6"
-
+                android:background="#FFFF"
+                android:paddingTop="10dp"
 
                 />
 
@@ -120,32 +119,7 @@
 
 
                 />
-            <TextView
-                android:id="@+id/textViewCategoria"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
 
-                android:text="Categoría: "
-                android:textSize="14sp"
-                android:textColor="#163172"
-                android:textStyle="bold"
-                android:layout_marginTop="10dp"
-                />
-
-            <Spinner
-                android:id="@+id/spinnerCategorias"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:entries="@array/categorias"
-                android:paddingLeft="10dp"
-                android:textSize="18sp"
-
-                android:layout_marginBottom="10dp"
-                android:minHeight="35dp"
-                android:minWidth="340dp"
-                android:prompt="@string/selecciona_categoria"
-                android:spinnerMode="dropdown"
-                />
             <TextView
                 android:id="@+id/textViewFechaPedidoAdd"
                 android:layout_width="wrap_content"
@@ -202,12 +176,25 @@
                 android:layout_marginTop="4dp"
                 android:layout_marginBottom="8dp"
                 android:background="@drawable/dashed_line" />
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerViewPlates"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                tools:listitem="@layout/recyclerview_edit_raciones"
+                android:layout_height="130dp"
+                tools:listitem="@layout/recyclerview_edit_raciones" />
+            <Button
+                android:id="@+id/buttonAddRacion"
+                android:layout_width="50dp"
+                android:layout_height="40dp"
+                android:layout_below="@id/placeAdd"
+                android:layout_centerHorizontal="true"
+                android:layout_marginLeft="140dp"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/custom_button2"
+                android:text="+"
+                android:textSize="20dp"
                 />
+
         </LinearLayout>
 
 
