--- a/app/src/main/res/layout/recyclerview_edit_raciones.xml
+++ b/app/src/main/res/layout/recyclerview_edit_raciones.xml
@@ -17,8 +17,8 @@
         android:orientation="horizontal">
 
 
-        <EditText
-            android:id="@+id/editTextRacionEdit"
+        <TextView
+            android:id="@+id/textViewRacion"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="text"
@@ -43,7 +43,7 @@
             android:id="@+id/editTextCantidad"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:inputType="text"
+            android:inputType="number"
             android:textSize="12sp"
             android:minHeight="35dp"
             android:minWidth="50dp"
