--- a/app/src/main/res/layout/activity_orders_description.xml
+++ b/app/src/main/res/layout/activity_orders_description.xml
@@ -41,15 +41,15 @@
             android:id="@+id/placeDes"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
             android:layout_marginTop="120dp"
             android:background="@drawable/plato_info"
-            android:layout_marginHorizontal="20dp"
             android:orientation="vertical"
             android:padding="16dp"
             android:visibility="visible"
             tools:visibility="visible">
 
-                         />
+            />
 
             <TextView
                 android:id="@+id/textViewNombreCliente"
@@ -59,54 +59,56 @@
 
             <TextView
                 android:id="@+id/textViewNombreClienteFill"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                />
+                android:layout_width="200dp"
+                android:layout_height="wrap_content" />
 
             <TextView
                 android:id="@+id/textViewPrecioPedido"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Precio:" />
+
             <TextView
                 android:id="@+id/textViewPrecioFill"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                />
+                android:layout_width="200dp"
+                android:layout_height="wrap_content" />
 
             <TextView
                 android:id="@+id/textViewTelefonoPedido"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Teléfono:" />
+
             <TextView
                 android:id="@+id/textViewTelefonoFill"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                />
+                android:layout_width="200dp"
+                android:layout_height="wrap_content" />
+
             <TextView
                 android:id="@+id/textViewFechaPedido"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Fecha recogida:" />
+
             <TextView
                 android:id="@+id/textViewFechaFill"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                />
+                android:layout_width="200dp"
+                android:layout_height="wrap_content" />
+
             <View
                 android:layout_width="match_parent"
                 android:layout_height="9dp"
                 android:layout_marginTop="4dp"
                 android:layout_marginBottom="8dp"
                 android:background="@drawable/dashed_line" />
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerViewPlates"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                tools:listitem="@layout/recyclerview_raciones"
-                />
+                tools:listitem="@layout/recyclerview_raciones" />
         </LinearLayout>
+
         <Button
             android:id="@+id/buttonEliminarPedido"
             android:layout_width="wrap_content"
