no permite añadir platos iguales

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -64,6 +64,60 @@
             android:textColor="#FFF"
             android:textSize="34sp"
             app:iconTint="#163172" />
+        <Button
+            android:id="@+id/buttonUnitario"
+            android:layout_width="231dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/buttonPedidos"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="40dp"
+            android:background="@drawable/custom_button"
+            android:backgroundTint="#163172"
+            android:text="@string/unitarias"
+            android:textColor="#FFF"
+            android:textSize="14sp"
+            app:iconTint="#163172" />
+        <Button
+            android:id="@+id/buttonSobrecarga"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/buttonUnitario"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/custom_button"
+            android:backgroundTint="#163172"
+            android:text="@string/sobrecarga"
+            android:textColor="#FFF"
+            android:textSize="14sp"
+            app:iconTint="#163172" />
+        <Button
+            android:id="@+id/buttonVolumen"
+            android:layout_width="231dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/buttonSobrecarga"
+            android:layout_alignEnd="@id/buttonSobrecarga"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/custom_button"
+            android:backgroundTint="#163172"
+            android:text="@string/volumen"
+            android:textColor="#FFF"
+            android:textSize="14sp" 
+            app:iconTint="#163172" />
+        <Button
+            android:id="@+id/buttonEliminarTodo"
+            android:layout_width="231dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/buttonSobrecarga"
+            android:layout_alignEnd="@id/buttonSobrecarga"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/custom_button"
+            android:backgroundTint="#163172"
+            android:text="@string/volumen"
+            android:textColor="#FFF"
+            android:textSize="14sp"
+            app:iconTint="#163172" />
     </RelativeLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
