--- a/app/src/main/res/layout/activity_add_plate.xml
+++ b/app/src/main/res/layout/activity_add_plate.xml
@@ -110,7 +110,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:hint="Introduce el precio"
-                android:inputType="number"
+                android:inputType="numberDecimal"
                 android:textSize="18sp"
                     android:minHeight="35dp"
                     android:minWidth="340dp"
