--- a/app/src/main/res/layout/recyclerview_plato_item.xml
+++ b/app/src/main/res/layout/recyclerview_plato_item.xml
@@ -5,7 +5,7 @@
     android:background="#FFFFFF"
     android:backgroundTint="#FFFFFF"
     android:orientation="vertical"
-    android:padding="16dp"
+    android:padding="10dp"
     android:visibility="visible"
     tools:visibility="visible"
     >
@@ -45,5 +45,13 @@
             android:layout_weight="1"
             android:text="Categoría: "
             android:textSize="16sp" />
+        
     </LinearLayout>
+    <View
+        android:layout_marginTop="10dp"
+        android:layout_width="340dp"
+        android:layout_height="2dp"
+        android:background="@color/colorPrimary"
+        android:layout_gravity="center"
+        />
 </LinearLayout>
