--- a/app/src/main/res/layout/activity_orders_description.xml
+++ b/app/src/main/res/layout/activity_orders_description.xml
@@ -63,6 +63,16 @@
                 android:layout_height="wrap_content" />
 
             <TextView
+                android:id="@+id/textViewNombreEstado"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Estado: " />
+
+            <TextView
+                android:id="@+id/textViewNombreEstadoFill"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content" />
+            <TextView
                 android:id="@+id/textViewPrecioPedido"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
