--- a/app/src/main/res/layout/activity_edit_order.xml
+++ b/app/src/main/res/layout/activity_edit_order.xml
@@ -83,12 +83,10 @@
                 android:textColor="#163172"
                 android:textStyle="bold"
                 android:text="Precio:" />
-            <EditText
+            <TextView
                 android:id="@+id/editTextPrecioEdit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:hint="Introduce el precio"
-                android:inputType="text"
                 android:textSize="12sp"
                 android:minHeight="35dp"
                 android:minWidth="340dp"
